--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <scriptf src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <title>Pho #me</title>
   </head>
   <body>
